changed textbox to a div and adjusted style

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -12,3 +12,16 @@ body {
     padding: 1rem;
     margin: 1rem 1rem 1rem 0;
 }
+
+.display {
+    color: white;
+    width: 10rem;
+    height: 2.9rem;
+    position: absolute;
+    display: inline;
+    /* float: right; */
+    top: 1.3rem;
+    font-size: 2rem;
+    text-align: right;
+    overflow: hidden;
+}
